--- a/my-app/src/pages/Works.css
+++ b/my-app/src/pages/Works.css
@@ -1,6 +1,11 @@
 .container {
     display: flex;
   }
+
+  .cape-verde-content {
+    background-color: white;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
+  }
   
   .works-sidebar {
     position: fixed;
@@ -26,6 +31,7 @@
   .works-sidebar h2 {
     margin-top: 0;
     margin-bottom: 20px;
+    font-size: calc(20px + 0.2vw);
   }
 
   .work-links {
@@ -43,6 +49,7 @@
     text-decoration: none;
     font-size: 15px;
     color: white;
+    font-size: calc(14px + 0.2vw);
   }
   
   .works-content {
@@ -137,4 +144,135 @@
       opacity: 1; /* Blinking effect */
     }
   }
+
+  .project-header {
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center horizontally */ /* Center text horizontally */
+  }
+  
+  .project-header h2 {
+    margin-top: 0;
+    text-align: center;
+  }
+  
+  .project-image {
+    width: 80%;
+    min-width: 300px;
+    margin-bottom: 20px;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .project-section {
+    margin-bottom: 20px;
+  }
+
+  .project-details {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap; /* Allow items to wrap */
+    margin-top: 20px; /* Add some space between the image and details */
+    margin-left: 11%;
+  }
+  
+  .project-section {
+    flex-grow: 1; /* Allow sections to grow equally */
+    margin-right: 15px; /* Adjust spacing between sections */
+  }
+  
+  .context {
+    flex-basis: 60%; /* 2/3 of the width */
+  }
+  
+  .role, .timeline {
+    flex-basis: 15%; /* 1/3 of the width for each section */
+  }
+
+  .work-thumbtack-img {
+    position: relative;
+    top: 0; /* Adjust top position as needed */
+    left: -50%; /* Adjust left position as needed */
+    width: 30px;
+  }
+
+  .project-body {
+    line-height: 25px;
+    padding: 20px;
+    padding-left: 70px;
+    margin-top: 0px;
+    padding-top: 0px;
+  }
+
+  .project-body h3 {
+    width: auto;
+    background-color: rgba(255, 213, 0, 0.673);
+    border-bottom: 1px solid black;
+  }
+
+  .link {
+    color: red;
+  }
+
+  .project-subImages-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px; /* Adjust margin as needed */
+  }
+
+  .project-subImage:hover, .project-image:hover {
+    transform: scale(1.05); /* Increase scale on hover */
+  }
+
+  .cape-verde-content a {
+    text-decoration: none;
+  }
+
+  .project-subImage,
+  .project-image {
+    width: 80%;
+    max-width: 100%; /* Ensure image doesn't exceed container width */
+    display: block; /* Ensure the image behaves as a block element */
+    margin: 0 auto; /* Center the image horizontally */
+    border-color: grey;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .project-subImage {
+    margin-top: 30px;
+    width: 60%;
+    min-width: 300px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+  }
+
+  @media (max-width: 600px) {
+    .works-sidebar {
+      width: 20%; /* Reduce sidebar width for smaller screens */
+    }
+
+    .cape-verde-content {
+      width: 350px;
+      margin-left: 60px;
+    }
+  
+    .works-content {
+      margin-left: 15%; /* Adjust content margin for smaller screens */
+    }
+
+    .project-subImage {
+      margin-right: 40px;
+    }
+
+    .work-card {
+      margin-left: 60px;
+    }
+  }
+  
+
+
+
   
