--- a/my-app/src/pages/About.css
+++ b/my-app/src/pages/About.css
@@ -27,6 +27,10 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .polaroid:hover {
+    transform: rotate(-8deg); /* Rotate left a little on hover */
+  }
   
   .thumbtack {
     position: absolute; /* Add position absolute */
