--- a/my-app/src/pages/Works.css
+++ b/my-app/src/pages/Works.css
@@ -271,6 +271,34 @@
       margin-left: 60px;
     }
   }
+
+  .table_section {
+    display:flex;
+    flex-direction:column; 
+    align-items: center;
+}
+
+table {
+    border-collapse: collapse;
+    background-color:rgb(129, 171, 81);
+    width: 60%;
+}
+
+th, td {
+    padding: 20px; /* Adjust the value as needed */
+    border: 1px solid #ddd;
+    text-align: left;
+    color: white;
+}
+
+th {
+    text-align: center;
+    font-weight: bolder;
+}
+
+td {
+    text-align: center;
+}
   
 
 
