--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -85,6 +85,22 @@ html, body, #root, .App {
   margin-right: 0px;
 }
 
+.sticker {
+  text-align: center;
+  font-size: 20px;
+  position: absolute;
+  width: 50%;
+  top: 20px;
+  left: 20px;
+  background-color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+  z-index: 3;
+  letter-spacing: 7px;
+}
+
 @media screen and (max-width: 1250px) {
   .navbar ul li {
     margin-right: 10px; /* Reduce margin between tabs for smaller screens */
@@ -97,6 +113,10 @@ html, body, #root, .App {
   .manila-tab {
     width: calc(30% - 20px); /* Full width for smaller screens */
   }
+
+  .sticker {
+    width: calc(30% - 20px);
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -107,6 +127,13 @@ html, body, #root, .App {
 
   .manila-tab {
     width: calc(20% - 20px); /* Full width for smaller screens */
+  }
+
+  .sticker {
+    left: 5px;
+    width: calc(28% - 20px);
+    font-size: 10px;
+    letter-spacing: 3px;
   }
 
   .container {
