--- a/my-app/src/pages/Works.css
+++ b/my-app/src/pages/Works.css
@@ -299,6 +299,26 @@ th {
 td {
     text-align: center;
 }
+
+.project-subImages-container.time {
+  margin-top: 30px;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center horizontally */
+  align-items: center;
+}
+
+.time-img {
+  width: 30%; /* Adjust as needed */
+  min-width: 200px;
+  margin-right: 20px;
+  margin-bottom: 20px; /* Adjust as needed */
+  box-shadow: inset 20px 20px 4px rgba(0, 0, 0, 0.3);
+}
+
+.time-img:hover {
+  scale: 1.1;
+}
   
 
 
